--- a/prometheus-endpoint.yaml
+++ b/prometheus-endpoint.yaml
@@ -1,27 +1,27 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: glusterfs-cluster-p
+  name: glusterfs-cluster
   namespace: monitoring
 spec:
   ports:
-  - port: 2
+  - port: 1
 ---
 apiVersion: v1
 kind: Endpoints
 metadata:
-  name: glusterfs-cluster-p
+  name: glusterfs-cluster
   namespace: monitoring
 subsets:
   - addresses:
       - ip: 192.168.10.10
     ports:
-      - port: 2
+      - port: 1
   - addresses:
-      - ip: 192.168.10.11
+      - ip: 192.168.10.11 
     ports:
-      - port: 2
+      - port: 1
   - addresses:
       - ip: 192.168.10.12
     ports:
-      - port: 2
+      - port: 1
